# This setup.cfg file is still required on EL9 in addition to the toml.

[metadata]
# This section provides the core metadata that the older setuptools needs.
# It should match what's in your pyproject.toml.
name = lustre-hsm-action-stream
version = 0.1.0
author = Stephane Thiell
author_email = sthiell@stanford.edu
description = A toolkit for shipping and reconciling Lustre HSM action events.
license_files = LICENSE
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/stanford-rc/lustre-hsm-action-stream

[options]
# This tells setuptools where to find the actual Python code.
package_dir =
    = src
packages = find:
python_requires = >=3.9

[options.packages.find]
where = src

[options.entry_points]
# This is the crucial part that tells setuptools to create the executables.
# It's the equivalent of the [project.scripts] section in pyproject.toml.
console_scripts =
    hsm-action-shipper = lustre_hsm_action_stream.shipper:main
    hsm-stream-reconciler = lustre_hsm_action_stream.reconciler:main
    hsm-action-top = lustre_hsm_action_stream.viewer:main
    hsm-stream-janitor = lustre_hsm_action_stream.janitor:main
