# setup.cfg for el9 compat

[metadata]
name = lustre-hsm-action-stream
version = 0.2.0
author = Stephane Thiell
author_email = sthiell@stanford.edu
description = A toolkit for shipping and reconciling Lustre HSM action events.
license_file = LICENSE
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/stanford-rc/lustre-hsm-action-stream
classifiers =
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 3

[options]
# Tells setuptools where to find the Python package source.
package_dir =
    = src
packages = find:
python_requires = >=3.9

[options.packages.find]
where = src

# Defines the executables to be created.
[options.entry_points]
console_scripts =
    hsm-action-shipper = lustre_hsm_action_stream.shipper:main
    hsm-stream-reconciler = lustre_hsm_action_stream.reconciler:main
    hsm-action-top = lustre_hsm_action_stream.viewer:main
    hsm-stream-stats = lustre_hsm_action_stream.stats:main
    hsm-stream-tail = lustre_hsm_action_stream.tail:main
